fix: flex layout issues in header

--- a/assets/css/site/burger.css
+++ b/assets/css/site/burger.css
@@ -4,6 +4,7 @@
     width: 30px;
     height: 30px;
     cursor: pointer;
+    flex-shrink: 0;
 }
 
 .burger-bar {
